# BelgianChocolateDuke3D

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_macosx.sh  build_windows.bat  build_windows_x64.bat  build_windows_x86.bat  duke3d_vs2012.sln  vcpkg_linux.sh  vcpkg_macosx.sh  vcpkg_windows.bat  vcpkg_windows_x64.bat  vcpkg_windows_x86.bat
.github/workflows/: linux.yml  macosx.yml  windows.yml  windows_x64.yml  windows_x86.yml
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: build.h  cache.c  cache.h  display.c  display.h  draw.c  draw.h  engine.c  engine.h  filesystem.c  filesystem.h  fixedPoint_math.c  fixedPoint_math.h  macos_compat.h  mmulti.c  mmulti.h  mmulti_stable.cpp  network.c  network.h  platform.h  sdl_util.h  tiles.c  unix_compat.h  win32_compat.h
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  chocolateDukeResources.rc
Game/src/: actors.c  config.c  config.h  console.c  control.c  control.h  cvar_defs.c  cvars.c  cvars.h  duke3d.h  dukeunix.h  dukewin.h  funct.h  game.c  gamedef.c  global.c  global.h  keyboard.c  menues.c  names.h  player.c  premap.c  rts.c  sector.c  soundefs.h  sounds.c  sounds.h  types.h  util_lib.h
Game/src/audiolib/: _multivc.h  dpmi.h  dsl.c  fx_man.c  fx_man.h  ll_man.c  ll_man.h  multivoc.c  multivoc.h  music.h  mv_mix.c  mvreverb.c  nodpmi.c  pitch.c  pitch.h  sndcards.h  usrhooks.h
Game/src/midi/: sdl_midi.c
cmake/: FindSDL2Mixer.cmake
doc/Duke3D_w32/: duke3d_w32.chm  duke3d_w32_b19.1.7z  multiplayer.txt
doc/Duke3D_w32/nettest/: netcfg_player1.txt  netcfg_player2.txt  nettest_player1.bat  nettest_player2.bat
doc/Fabien Sanglard/: notes.txt
doc/Vanilla/: duke3dsource.7z  kenbuild.7z
doc/xDuke/: xDuke_19.7.1_Source_Code.7z
